# promises

./: .buckconfig  .gitignore  .hgignore  .swiftlint.yml  .travis.yml  BUCK  BUILD  BUILD.bazel  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FBLPromise+Testing.h  FBLPromises.h  MODULE.bazel  Package.swift  PromisesObjC.podspec  PromisesSwift.podspec  README.md  WORKSPACE
.github/workflows/: ci.yaml
Promises.playground/: Contents.swift
Promises.tulsiproj/: project.tulsiconf
Promises.tulsiproj/Configs/: Promises.tulsigen
Promises.xcodeproj/: FBLPromises_Info.plist  PromisesInteroperabilityTests_Info.plist  PromisesPerformanceTests_Info.plist  TestHost_Info.plist  project.pbxproj
Promises.xcworkspace/: contents.xcworkspacedata
Sources/FBLPromises/: FBLPromise+All.m  FBLPromise+Always.m  FBLPromise+Any.m  FBLPromise+Async.m  FBLPromise+Catch.m  FBLPromise+Delay.m  FBLPromise+Do.m  FBLPromise+Observer.m  FBLPromise+Race.m  FBLPromise+Recover.m  FBLPromise+Resolve.m  FBLPromise+Retry.m  FBLPromise+Testing.m  FBLPromise+Then.m  FBLPromise+Timeout.m  FBLPromise+Validate.m  FBLPromise+When.m  FBLPromise+Wrap.m  FBLPromise.m  FBLPromiseError.m  FBLPromiseProgress.m
Sources/FBLPromisesTestHelpers/: FBLPromisesTestInteroperability.m
Sources/Promises/: Promise+All.swift  Promise+Always.swift  Promise+Any.swift  Promise+Async.swift  Promise+Await.swift  Promise+Catch.swift  Promise+Delay.swift  Promise+Do.swift  Promise+Race.swift  Promise+Recover.swift  (+11 more)
g3doc/: advanced.md  anti-patterns.md  basics.md  extensions.md  framework.md  index.md  integration.md  introduction.md
(+112 files in other folders)
